adding inc heap cmd